--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <i id="css" onmouseenter="colorin(5)" onmouseout="colorout(5)" class="devicon-css3-plain-wordmark css"></i>
                         <i id="jscript" class="devicon-javascript-plain javascript"></i>
                         <i id="boot" class="devicon-bootstrap-plain-wordmark bootstrap"></i>
-                        <i id="react" onmouseenter="colorin(6)" onmouseout="colorout(6)" class="devicon-react-original-wordmark react"></i>
+                        <!-- <i id="react" onmouseenter="colorin(6)" onmouseout="colorout(6)" class="devicon-react-original-wordmark react"></i> -->
                         <i id="gitlogo" onmouseenter="colorin(7)" onmouseout="colorout(7)" class="devicon-github-plain-wordmark git"></i>
                     <!-- <span class="line line-center line2 mt-2 line_knowledge" style="height: 1px;"></span> -->
                     </div>
@@ -199,7 +199,7 @@
     </section>
 
     <!-- Experience Section -->
-    <section id="experience" class="experience-section contents ">
+    <section id="experience" class="experience-section content d-none">
         <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Experience <span style="font-size: 0.8rem; min-width: 176px;">What I Have learned</span></h1>
             
@@ -291,7 +291,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="projects-section contents d-none">
+    <section id="projects" class="projects-section contents">
         <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Projects <span style="font-size: 0.8rem;">What I have done</span></h1>
             <div class="row">
