--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top d-none" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav">
         <div class="container-fluid mx-3 appearonload">
             <a class="navbar-brand js-scroll-trigger ml-1" href="#page-top"><img class="main-logo" src="img/favicon2.png"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -96,7 +96,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead d-none">
+    <header class="masthead ">
         <div class="container d-flex h-75 align-items-center pt-5 appearonload">
             <div class="mx-auto text-center">
                 <h1 class="mx-auto text-uppercase text-white">Akshant Jain</h1>
@@ -107,7 +107,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="about-section contents d-none">
+    <section id="about" class="about-section contents ">
         <div id="container" class="container-fluid">
             <h1 class=" text-left text-uppercase heads">About Me <span style="font-size: 0.8rem;">Who am I</span></h1>
             <div class="row m-3">
@@ -134,7 +134,7 @@
     </section>
 
     <!-- Coursework & Skills Section -->
-    <section id="skills" class="skill-section contents d-none">
+    <section id="skills" class="skill-section contents ">
         <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Coursework and Skills <span style="font-size: 0.8rem;">What I Know</span></h1>
             <div class="row m-auto">
@@ -199,7 +199,7 @@
     </section>
 
     <!-- Experience Section -->
-    <section id="experience" class="experience-section content d-none">
+    <section id="experience" class="experience-section content ">
         <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Experience <span style="font-size: 0.8rem; min-width: 176px;">What I Have learned</span></h1>
             
@@ -541,7 +541,7 @@
         </div>
     </section>
 
-    <section id="resume" class="d-none">
+    <section id="resume" class="">
         <a class="block-btn" href="https://drive.google.com/file/d/18OM9oCFruBmdAovOkeMj5dj5D0y-SUPj/view" target="_blank"> <span class="text">View my full
                 resume</span>
             <img class="icon" src="img/download.png" alt="download resume">
@@ -569,7 +569,7 @@
     </section> -->
 
     <!-- Contact Section -->
-    <section class="contact-section bg-black contents d-none" id="contact">
+    <section class="contact-section bg-black contents" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3 mb-md-0">
