--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="author" content="Akshant Jain">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="img/favicon2.png">
         <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
 
         <meta name="description"
