--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
                 <div class="wrapper container mb-3 mt-3">
                     <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(0)">
                         <div class="container">
-                            <div class="img webapp ml-4 mr-4"></div>
-                            <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Advanced Encryptor</h4>
-                            <p class="duration ml-3">April 2020 - Present</p>
+                            <div class="img webapp"></div>
+                            <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">Advanced Encryptor</p>
                             <a href="https://github.com/Akshantjain/AdvancedEncryptor" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="http://akshantjain.me/AdvancedEncryptor/" target="_blank"><div class="img2 external"></div></a>
+                            <p class="duration ml-2">April 2020 - Present</p>
                             <!-- <a href="https://akshantjain.github.io" target="_blank"><div class="img2 paper"></div></a> -->
                         </div>
                         <div class="container project-description minimize">
@@ -320,9 +320,9 @@
                     
                     <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(1)">
                         <div class="container">
-                            <div class="img webapp ml-4 mr-4"></div>
-                            <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">COVID-19 Tracker</h4>
-                            <p class="duration ml-3">April - May 2020</p>
+                            <div class="img webapp"></div>
+                            <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">COVID-19 Tracker</p>
+                            <p class="duration ml-2">April - May 2020</p>
                             <a href="https://github.com/Akshantjain/it202-project4" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="http://akshantjain.github.io/it202-project4/" target="_blank"><div class="img2 external"></div></a>
                         </div>
@@ -340,9 +340,9 @@
 
                     <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(2)">
                         <div class="container">
-                            <div class="img security ml-4 mr-4"></div>
-                            <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Home Security System</h4>
-                            <p class="duration ml-3">September - December 2019</p>
+                            <div class="img security"></div>
+                            <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">Home Security System</p>
+                            <p class="duration ml-2">September - December 2019</p>
                             <a href="https://github.com/Akshantjain/Home-Security-System" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="container project-description minimize">
@@ -390,7 +390,7 @@
                                         href="https://create.arduino.cc/projecthub/SURYATEJA/use-a-buzzer-module-piezo-speaker-using-arduino-uno-89df45">
                                         Buzzers (3)</a>
                                     <a target="_blank" href="https://www.arduino.cc/en/reference/wire"> Connecting Wires
-                                        (~40)</a>
+                                        (~50)</a>
                                     <a target="_blank" href="https://learn.adafruit.com/adafruit-arduino-lesson-2-leds/resistors"> Resistors
                                         (8)</a>
                                 </div>
@@ -410,9 +410,9 @@
 
                     <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(3)">
                         <div class="container">
-                            <div class="img web ml-4 mr-4"></div>
-                            <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Personal Website v1</h4>
-                            <p class="duration ml-3">July - August 2019</p>
+                            <div class="img web"></div>
+                            <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">Personal Website v1</p>
+                            <p class="duration ml-2">July - August 2019</p>
                             <a href="https://github.com/Akshantjain/v1" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="http://akshantjain.me/v1/" target="_blank"><div class="img2 external"></div></a>
                         </div>
@@ -426,63 +426,14 @@
                                     <li>The brand new version (current) of my website is now in public.</li>
                                 </ul>
                             </div>
-                    
-                            <div class="mb-4 ml-3">
-                                <p class="m-0 mb-1 p-0 text-left"><span class="fa fa-tools px-1 "></span>Hardware and Concepts used:</p>
-                                <div class="horizontal-scroll px-2">
-                                    <a target="_blank" href="https://learn.sparkfun.com/tutorials/what-is-an-arduino/all">Arduino UNO
-                                        (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/Tutorial/MasterWriter">I2C
-                                        Communication</a>
-                                    <a target="_blank" href="https://learn.adafruit.com/lesson-0-getting-started/breadboard">
-                                        BreadBoard (3)</a>
-                                    <a target="_blank"
-                                        href="https://learn.pimoroni.com/tutorial/170pt-projects/anatomy-of-a-mini-breadboard">
-                                        Mini BreadBoard (1)</a>
-                                    <a target="_blank" href="https://en.wikipedia.org/wiki/Nine-volt_battery"> Batteries (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/Tutorial/HelloWorld"> 16x2 LCD Display
-                                        (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/tutorial/blink"> LED Lights (4)</a>
-                                    <a target="_blank"
-                                        href="https://www.instructables.com/id/How-to-use-a-photoresistor-or-photocell-Arduino-Tu/">
-                                        Photoresistor (1)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/tutorial/potentiometer"> Potentiometer
-                                        (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/tutorial/button"> Pin Buttons (2)</a>
-                                    <a target="_blank"
-                                        href="https://www.tutorialspoint.com/arduino/arduino_ultrasonic_sensor.htm">Ultrasonic
-                                        Sensor (1)</a>
-                                    <a target="_blank" href="https://playground.arduino.cc/Code/Keypad/">4x4 Keypad (1)</a>
-                                    <a target="_blank"
-                                        href="https://create.arduino.cc/projecthub/Aritro/smoke-detection-using-mq-2-gas-sensor-79c54a">Smoke
-                                        Sensor (1)</a>
-                                    <a target="_blank"
-                                        href="https://create.arduino.cc/projecthub/SURYATEJA/use-a-buzzer-module-piezo-speaker-using-arduino-uno-89df45">
-                                        Buzzers (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/reference/wire"> Connecting Wires
-                                        (~40)</a>
-                                    <a target="_blank" href="https://learn.adafruit.com/adafruit-arduino-lesson-2-leds/resistors"> Resistors
-                                        (8)</a>
-                                </div>
-                            </div>
-                            <div class="mb-4 ml-3">
-                                <p class="m-0 mb-1 p-0 text-left"><span class="px-1 fa fa-file-alt"></span>Project Documents:</p>
-                                <div class="horizontal-scroll px-2">
-                                    <a href="http://bit.ly/2SZ3C83" target="_blank">Initial Team and Idea</a>
-                                    <a href="http://bit.ly/3c8AoeG" target="_blank">Team and Project Contract</a>
-                                    <a href="http://bit.ly/2wIGSAx" target="_blank">Updated Design Document</a>
-                                    <a href="http://bit.ly/2SY0FEQ" target="_blank">Project Presentation</a>
-                                    <a href="http://bit.ly/2PrJo4V" target="_blank">Final Design Document</a>
-                                </div>
-                            </div>
                         </div>
                     </div>
 
                     <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(4)">
                         <div class="container">
-                            <div class="img game ml-4 mr-4"></div>
-                            <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Tic Tac Toe Game</h4>
-                            <p class="duration ml-3">November 2019</p>
+                            <div class="img game"></div>
+                            <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">Tic Tac Toe Game</p>
+                            <p class="duration ml-2">November 2019</p>
                             <a href="https://github.com/Akshantjain/Tic-Tac-Toe-Game" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="container project-description minimize">
@@ -500,9 +451,9 @@
 
                     <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(5)">
                         <div class="container">
-                            <div class="img game ml-4 mr-4"></div>
-                            <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Baccarat Game</h4>
-                            <p class="duration ml-3">September 2019</p>
+                            <div class="img game"></div>
+                            <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">Baccarat Game</p>
+                            <p class="duration ml-2">September 2019</p>
                             <a href="https://github.com/Akshantjain/Baccarat-Game" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="container project-description minimize">
