--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </section>
     
     <!-- Footer -->
     <footer class="bg-black small text-center contents text-white-50" style="padding-top: 30px;">
