--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                             <div class="img webapp"></div>
                             <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">Advanced Encryptor</p>
                             <a href="https://github.com/Akshantjain/AdvancedEncryptor" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="http://akshantjain.me/AdvancedEncryptor/" target="_blank"><div class="img2 external"></div></a>
+                            <a href="http://akshantjain.github.io/AdvancedEncryptor/" target="_blank"><div class="img2 external"></div></a>
                             <p class="duration ml-2">April 2020 - Present</p>
                             <!-- <a href="https://akshantjain.github.io" target="_blank"><div class="img2 paper"></div></a> -->
                         </div>
@@ -405,7 +405,7 @@
                             <p class="font-weight-light d-inline-block project-head" style="margin: 0px;">Personal Website v1</p>
                             <p class="duration ml-2">July - August 2019</p>
                             <a href="https://github.com/Akshantjain/v1" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="http://akshantjain.me/v1/" target="_blank"><div class="img2 external"></div></a>
+                            <a href="http://akshantjain.github.io/v1/" target="_blank"><div class="img2 external"></div></a>
                         </div>
                         <div class="container project-description minimize">
                             <div class="description text-justify">
