--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <meta name="description"
             content="Computer Science Student, Aspiring Software and Front End Developer">
-        <meta name="keywords" content="design, development, web, akshantjain, akshant, jain, software, student, senior">
+        <meta name="keywords" content="design, development, web, akshantjain, akshant, jain, software, student, senior, personal website, website, personal, info, example">
 
         <title>Akshant Jain | Developer</title>
 
@@ -20,14 +20,6 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163496746-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-
-            gtag('config', 'UA-163496746-1');
-        </script>
 
 
         <!-- Custom fonts for this template -->
