--- a/index.html
+++ b/index.html
@@ -630,6 +630,20 @@
         <!-- <script type="text/javascript" src="js/skrollr.min.js"></script> -->
     
         <script src="js/script.js"></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', function () {
+                    navigator.serviceWorker.register('./sw.js').then(function (registration) {
+                        // Registration was successful
+                        console.log('ServiceWorker registration successful with scope: ', registration
+                            .scope);
+                    }, function (err) {
+                        // registration failed :(
+                        console.log('ServiceWorker registration failed: ', err);
+                    });
+                });
+            }
+        </script>
     
     </section>
 
