safari support added

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ permalink: /404.html
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="author" content="Akshant Jain">
-        <link rel="shortcut icon" type="image/png" href="imgs/favicon.webp">
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
         <meta name="description" content="Computer Science Student, Aspiring Software and Front End Developer">
         <meta name="keywords" content="design, development, web, akshantjain, akshant, jain, software, student, senior">
