--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="author" content="Akshant Jain">
-        <link rel="shortcut icon" type="image/png" href="imgs/favicon2.webp">
+        <link rel="shortcut icon" type="image/png" href="img/favicon2.png">
         <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
         <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
         <link rel="manifest" href="site.webmanifest">
@@ -48,7 +48,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav">
         <div class="container-fluid mx-3 appearonload">
-            <a class="navbar-brand js-scroll-trigger ml-1" href="#page-top"><img class="main-logo" alt="Logo" src="imgs/favicon2.webp"></a>
+            <a class="navbar-brand js-scroll-trigger ml-1" href="#page-top"><img class="main-logo" alt="Logo" src="img/favicon2.png"></a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -90,7 +90,7 @@
                 <div class="about-intro pt-2">
                     <p class="name text-white mb-2" style=" font-family: 'Source Sans Pro', sans-serif;">Hi! I'm Akshant Jain!</h2>
                     <span class="line mt-0 mb-4"></span>
-                    <img src="imgs/my_image.webp" class="headshot" alt="My Image">
+                    <img src="img/my_image.jpg" class="headshot" alt="My Image">
                     <p class="text-white-50 mb-3">
                         I'm a fourth year student at University of Illinois at Chicago studying Computer Science along with minor in mathematics. I have
                         experience developing and designing both web software and computer software, from simple basic programs to progressive and responsice web applications. 
@@ -471,7 +471,7 @@
     <section id="resume" class="">
         <a class="block-btn" href="https://drive.google.com/file/d/18OM9oCFruBmdAovOkeMj5dj5D0y-SUPj/view" target="_blank" rel="noopener noreferrer"> <span class="text">View my full
                 resume</span>
-            <img class="icon" src="imgs/download.webp" alt="download resume">
+            <img class="icon" src="img/download.png" alt="download resume">
         </a>
     </section>
 
