--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=, shrink-to-fit=no">
     <meta name="author" content="Akshant Jain">
     <link rel="shortcut icon" type="image/png" href="img/favicon2.png">
     <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
     <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
     <link rel="manifest" href="site.webmanifest">
     <meta name="theme-color" content="#317EFB"/>
+    <link rel="canonical" href="https://akshantjain.github.io" />
 
     <meta name="description"
         content="Computer Science Student, Aspiring Software and Front End Developer">
@@ -26,7 +27,7 @@
         integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" rel="preload" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
     <!-- Custom styles for this template -->
     <link href="css/main_style.css" rel="stylesheet">
@@ -82,30 +83,31 @@
             <div class="mx-auto text-center">
                 <h1 class="mx-auto text-uppercase text-white">Akshant Jain</h1>
                 <div class="divider d-none" style="background-color: transparent;"></div>
+                <h2 class="text-white mx-auto">Aspiring Software and Web Developer</h2>
             </div>
         </div>
     </header>
 
     <!-- About Section -->
-    <section id="about" class="about-section contents d-none">
+    <section id="about" class="about-section contents">
         <div id="container" class="container-fluid">
-            <h1 class=" text-left text-uppercase heads">About Me <span style="font-size: 0.8rem;">Who am I</span></h1>
+            <h1 class=" text-left text-uppercase heads">About Me <span style="font-size: 0.8rem;">Who I am</span></h1>
             <div class="row m-3">
                 <div class="about-intro pt-2">
                     <p class="name text-white mb-2" style=" font-family: 'Source Sans Pro', sans-serif;">Hi! I'm Akshant Jain!</h2>
                     <span class="line mt-0 mb-4"></span>
                     <img src="img/my_image.jpg" class="headshot" alt="My Image">
                     <p class="text-white-50 mb-3">
-                        I'm a fourth year student at University of Illinois at Chicago studying Computer Science along with minor in mathematics. I have
-                        experience developing and designing both web software and computer software, from simple basic programs to progressive and responsice web applications. 
+                        I'm a fourth year student at University of Illinois at Chicago studying Computer Science with minor in mathematics. I have
+                        experience in developing and designing computer softwares and web applications from simple basic programs to progressive and responsice web applications and websites. 
                         I love to create software to enhance user experience and solve real world problems in a creative ways.
                         <br><br>
-                        I love learning new development languages to create user experiences with clean, efficient, and scalable code. I
-                        consider work an ongoing education, and I'm always looking for opportunities to work with those who are willing to share
-                        their knowledge as much as I want to learn. At the end of the day, my primary goal is to learn and help people with their
+                        I like learning new development languages to create user experiences with clean, efficient, and scalable code. I
+                        consider work an ongoing education, and I'm always looking for opportunities to work people who are willing to share
+                        their knowledge and skills so that we could develop better things. At the end of the day, my primary goal is to learn and help people with their
                         problems in a virtual and creative way through my skills and knowledge.
                         <br><br>
-                        I am also interested in learning Artificial Intelligence and Machine Learning so that I could find a way to develop programs in a much easier and
+                        I am also interested in learning Artificial Intelligence and Machine Learning to find a way to develop programs in a much easier and
                         productive manner.
                     </p>
                 </div>
@@ -114,7 +116,7 @@
     </section>
 
     <!-- Coursework & Skills Section -->
-    <section id="skills" class="skill-section contents d-none">
+    <section id="skills" class="skill-section contents ">
         <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Coursework and Skills <span style="font-size: 0.8rem;">What I Know</span></h1>
             <div class="row m-auto">
