--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Akshant Jain">
     <link rel="shortcut icon" type="image/png" href="img/favicon2.png">
     <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
