--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 <body id="page-top" class="pageTop">
 
+    <!-- Copyright (c) 2013-2020 Start Bootstrap LLC -->
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav">
         <div class="container-fluid mx-3 appearonload">
