--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
                         <p class="font-weight-light project-head">COVID-19 Tracker</p>
                         <p class="duration ml-2">April - May 2020</p>
                         <section class="info-links ml-auto">
-                            <a class="view_link" href="http://akshantjain.github.io/it202-project4/" target="_blank" rel="noopener noreferrer"><i
+                            <a class="view_link" href="https://akshantjain-it202projects.github.io/it202-project4/" target="_blank" rel="noopener noreferrer"><i
                                     class="devicon-chrome-plain weblinks"></i></a>
-                            <a class="repo_link" href="https://github.com/Akshantjain/it202-project4" target="_blank" rel="noopener noreferrer"><i 
+                            <a class="repo_link" href="https://github.com/Akshantjain-it202projects/it202-project4" target="_blank" rel="noopener noreferrer"><i 
                                     class="devicon-github-plain weblinks"></i></a>
                         </section>
                     </div>
