--- a/index.html
+++ b/index.html
@@ -602,6 +602,13 @@
     
         <script src="js/profile.js"></script>
         <script src="js/script.js"></script>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="/__/firebase/8.2.9/firebase-app.js"></script>
+
+        <script src="/__/firebase/8.2.9/firebase-analytics.js"></script>
+
+        <!-- Initialize Firebase -->
+        <script src="/__/firebase/init.js"></script>
         <script>
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', function () {
