--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,11 @@
         integrity="sha256-H3cjtrm/ztDeuhCN9I4yh4iN2Ybx/y1RM7rMmAesA0k=" crossorigin="anonymous">
     </script>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.2.9/firebase-app.js"></script>
+
+    <script src="/__/firebase/8.2.9/firebase-analytics.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
